# mini-baheth

./: .gitignore  .mise.local.toml  Dockerfile  README.md  app.py  docker-compose.override.traefik.yml  docker-compose.yml  docker-entrypoint.sh  mise.toml  pyproject.toml  renovate.json  rga.config.json
.github/workflows/: publish.yaml
core/: __init__.py  patterns.py  pyproject.toml  schemas.py
desktop/: .gitignore  Cargo.toml  mise.toml  package.json  pnpm-lock.yaml  pyproject.toml  svelte.config.js  tsconfig.json  vite.config.js  wuchale.config.js
desktop/.github/workflows/: publish.yaml
desktop/scripts/: README.md  build_app.py  download_pdftotext.py  download_python.py  stage-tools.py
desktop/scripts/linux/: build.sh  download-py.sh  download-rg.sh
desktop/scripts/macos/: build.sh  download-py.sh  download-rg.sh
desktop/scripts/windows/: build.ps1  download-py.ps1  download-rg.ps1
desktop/src/: app.css  app.html
desktop/src-tauri/: .gitignore  .taurignore  Cargo.toml  pyproject.toml  tauri.bundle.json  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src-python/mini_baheth/: __init__.py  __main__.py
desktop/src/lib/: attachments.ts  constants.ts  search-events.ts  search.ts  types.ts  utils.ts
desktop/src/lib/components/: AppSidebar.svelte  CommandPalette.svelte  DirectoryPicker.svelte  FileFilterSelect.svelte  FilePreviewContent.svelte  FileViewerDialog.svelte  InlineFilePreview.svelte  MenubarSimple.svelte  ModeToggle.svelte  ResultsList.svelte  SearchInput.svelte  SearchPanel.svelte  Sidebar.svelte
desktop/src/lib/stores/: locale.ts
desktop/src/locales/: ar.po  en.po  main.loader.svelte.js
desktop/src/routes/: +layout.svelte  +page.svelte
templates/: error.html  file_modal.html  index.html
tests/: conftest.py  test_core_pcre.py  test_patterns.py  test_webapp_integration.py
webapp/: app.py
