[project]
name = "mini-baheth"
version = "0.1.0"
description = "Ripgrep Web UI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "granian[reload]>=2.2.5,<3",
    "nanodjango>=0.10.0",
    "orjson>=3.10.15",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]
