[project]
name = "mini-baheth"
version = "1.0.0"
description = "Ripgrep Web UI"
readme = "README.md"
requires-python = ">=3.13.8,<3.13.9"
dependencies = [
    "granian[reload, rloop]>=2.5.5,<3",
    "nanodjango>=0.12.2",
    "orjson>=3.11.4",
    "mini-baheth-core",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-django>=4.11.1",
    "ruff>=0.14.2",
]


[tool.ruff]
fix = true
target-version = "py314"
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
