[project]
name = "mini-baheth-core"
version = "0.1.0"
description = "Shared search logic and schemas for mini-baheth"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "orjson>=3.11.4,<4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core"]
package-dir = { core = "." }
