[package]
name = "mini-baheth"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mini_baheth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
# the same as the package name
name = "mini-baheth"
path = "src/main.rs"
required-features = ["pytauri/standalone"]

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.8", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.27" }
pytauri = { version = "0.8", features = [] }
tauri-plugin-pytauri = { version = "0.8" } # required for pytauri IPC
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2.0.0"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", branch = "dev" }

[profile.bundle-dev]
inherits = "dev"

[profile.bundle-release]
inherits = "release"
